# axomavis

./: CMakeLists.txt  README.md
core/: CMakeLists.txt
core/src/: main.cpp  version.h
core/src/archive/: archive.cpp  archive.h
core/src/capture/: capture.cpp  capture.h
core/src/decoder/: decoder.cpp  decoder.h
core/src/encoder/: encoder.cpp  encoder.h
core/src/processing/: processing.cpp  processing.h
core/src/source/: source.cpp  source.h
core/src/state/: state.cpp  state.h
core/src/utils/: avcodec.h  avformat.h  avframe.h  avpacket.h  avpkt.h
core/src/visualizer/: visualizer.cpp  visualizer.h
core/src/writer/: writer.cpp  writer.h
tests/: CMakeLists.txt  dummy-test.cpp  source-test.cpp  state-test.cpp
